.metadata/.plugins/org.eclipse.cdt.ui/More_Tests_v4.build.log
12:25:23 **** Incremental Build of configuration Debug for project More_Tests_v4 ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F439xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:345:31: error: unknown type name 'ADC_HandleTypeDef'; did you mean 'PCD_HandleTypeDef'?
  345 | void HAL_ADC_ConvCpltCallback(ADC_HandleTypeDef* AdcHandle){
      |                               ^~~~~~~~~~~~~~~~~
      |                               PCD_HandleTypeDef
../Core/Src/main.c: In function 'UART_TX':
../Core/Src/main.c:397:28: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  397 |  HAL_UART_Transmit(&huart3,temp,6,100);
      |                            ^~~~
      |                            |
      |                            char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:407,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:723:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
  723 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
../Core/Src/main.c:398:28: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  398 |  HAL_UART_Transmit(&huart3,"\r\n",2,100);
      |                            ^~~~~~
      |                            |
      |                            char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:407,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:723:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
  723 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

12:25:24 Build Failed. 2 errors, 2 warnings. (took 311ms)

